--- a/apps/expo/package.json
+++ b/apps/expo/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@acme/expo",
+  "name": "@reservue/expo",
   "version": "0.1.0",
   "private": true,
   "main": "expo-router/entry",
@@ -38,11 +38,11 @@
     "superjson": "2.2.1"
   },
   "devDependencies": {
-    "@acme/api": "workspace:^0.1.0",
-    "@acme/eslint-config": "workspace:^0.2.0",
-    "@acme/prettier-config": "workspace:^0.1.0",
-    "@acme/tailwind-config": "workspace:^0.1.0",
-    "@acme/tsconfig": "workspace:^0.1.0",
+    "@reservue/api": "workspace:^0.1.0",
+    "@reservue/eslint-config": "workspace:^0.2.0",
+    "@reservue/prettier-config": "workspace:^0.1.0",
+    "@reservue/tailwind-config": "workspace:^0.1.0",
+    "@reservue/tsconfig": "workspace:^0.1.0",
     "@babel/core": "^7.23.2",
     "@babel/preset-env": "^7.23.2",
     "@babel/runtime": "^7.23.2",
@@ -57,12 +57,12 @@
   "eslintConfig": {
     "root": true,
     "extends": [
-      "@acme/eslint-config/base",
-      "@acme/eslint-config/react"
+      "@reservue/eslint-config/base",
+      "@reservue/eslint-config/react"
     ],
     "ignorePatterns": [
       "expo-plugins/**"
     ]
   },
-  "prettier": "@acme/prettier-config"
+  "prettier": "@reservue/prettier-config"
 }
