--- a/apps/nextjs/package.json
+++ b/apps/nextjs/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@acme/nextjs",
+  "name": "@reservue/nextjs",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -13,9 +13,9 @@
     "with-env": "dotenv -e ../../.env --"
   },
   "dependencies": {
-    "@acme/api": "workspace:^0.1.0",
-    "@acme/auth": "workspace:^0.1.0",
-    "@acme/db": "workspace:^0.1.0",
+    "@reservue/api": "workspace:^0.1.0",
+    "@reservue/auth": "workspace:^0.1.0",
+    "@reservue/db": "workspace:^0.1.0",
     "@t3-oss/env-nextjs": "^0.7.1",
     "@tanstack/react-query": "^5.8.7",
     "@tanstack/react-query-devtools": "^5.8.7",
@@ -31,10 +31,10 @@
     "zod": "^3.22.2"
   },
   "devDependencies": {
-    "@acme/eslint-config": "workspace:^0.2.0",
-    "@acme/prettier-config": "workspace:^0.1.0",
-    "@acme/tailwind-config": "workspace:^0.1.0",
-    "@acme/tsconfig": "workspace:^0.1.0",
+    "@reservue/eslint-config": "workspace:^0.2.0",
+    "@reservue/prettier-config": "workspace:^0.1.0",
+    "@reservue/tailwind-config": "workspace:^0.1.0",
+    "@reservue/tsconfig": "workspace:^0.1.0",
     "@types/node": "^18.18.13",
     "@types/react": "^18.2.41",
     "@types/react-dom": "^18.2.17",
@@ -47,10 +47,10 @@
   "eslintConfig": {
     "root": true,
     "extends": [
-      "@acme/eslint-config/base",
-      "@acme/eslint-config/nextjs",
-      "@acme/eslint-config/react"
+      "@reservue/eslint-config/base",
+      "@reservue/eslint-config/nextjs",
+      "@reservue/eslint-config/react"
     ]
   },
-  "prettier": "@acme/prettier-config"
+  "prettier": "@reservue/prettier-config"
 }
