--- a/turbo.json
+++ b/turbo.json
@@ -40,9 +40,10 @@
     }
   },
   "globalEnv": [
-    "DATABASE_URL",
-    "AUTH_DISCORD_ID",
-    "AUTH_DISCORD_SECRET",
+    "AUTH_FACEBOOK_ID",
+    "AUTH_FACEBOOK_SECRET",
+    "AUTH_GOOGLE_ID",
+    "AUTH_GOOGLE_SECRET",
     "AUTH_REDIRECT_PROXY_URL",
     "AUTH_SECRET",
     "AUTH_URL"
