--- a/apps/nextjs/package.json
+++ b/apps/nextjs/package.json
@@ -13,6 +13,9 @@
     "with-env": "dotenv -e ../../.env --"
   },
   "dependencies": {
+    "@radix-ui/react-avatar": "^1.0.4",
+    "@radix-ui/react-dropdown-menu": "^2.0.6",
+    "@radix-ui/react-slot": "^1.0.2",
     "@reservue/api": "workspace:^0.1.0",
     "@reservue/auth": "workspace:^0.1.0",
     "@reservue/db": "workspace:^0.1.0",
@@ -24,10 +27,15 @@
     "@trpc/next": "next",
     "@trpc/react-query": "next",
     "@trpc/server": "next",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.0.0",
+    "lucide-react": "^0.303.0",
     "next": "^14.0.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "superjson": "2.2.1",
+    "tailwind-merge": "^2.2.0",
+    "tailwindcss-animate": "^1.0.7",
     "zod": "^3.22.2"
   },
   "devDependencies": {
