--- a/apps/nextjs/package.json
+++ b/apps/nextjs/package.json
@@ -15,9 +15,13 @@
   "dependencies": {
     "@hookform/resolvers": "^3.3.3",
     "@radix-ui/react-avatar": "^1.0.4",
+    "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-label": "^2.0.2",
+    "@radix-ui/react-popover": "^1.0.7",
+    "@radix-ui/react-select": "^2.0.0",
     "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-tabs": "^1.0.4",
     "@reservue/api": "workspace:^0.1.0",
     "@reservue/auth": "workspace:^0.1.0",
     "@reservue/db": "workspace:^0.1.0",
@@ -31,11 +35,15 @@
     "@trpc/server": "next",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
+    "cmdk": "^0.2.0",
+    "date-fns": "^3.0.6",
     "lucide-react": "^0.303.0",
     "next": "^14.0.3",
     "react": "18.2.0",
+    "react-day-picker": "^8.10.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.49.2",
+    "recharts": "^2.10.3",
     "superjson": "2.2.1",
     "tailwind-merge": "^2.2.0",
     "tailwindcss-animate": "^1.0.7",
