--- a/apps/nextjs/package.json
+++ b/apps/nextjs/package.json
@@ -29,6 +29,7 @@
     "@tanstack/react-query": "^5.8.7",
     "@tanstack/react-query-devtools": "^5.8.7",
     "@tanstack/react-query-next-experimental": "5.8.7",
+    "@tanstack/react-table": "^8.11.2",
     "@trpc/client": "next",
     "@trpc/next": "next",
     "@trpc/react-query": "next",
@@ -43,6 +44,7 @@
     "react-day-picker": "^8.10.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.49.2",
+    "react-wrap-balancer": "^1.1.0",
     "recharts": "^2.10.3",
     "superjson": "2.2.1",
     "tailwind-merge": "^2.2.0",
