--- a/apps/nextjs/package.json
+++ b/apps/nextjs/package.json
@@ -25,6 +25,7 @@
     "@reservue/api": "workspace:^0.1.0",
     "@reservue/auth": "workspace:^0.1.0",
     "@reservue/db": "workspace:^0.1.0",
+    "@reservue/validators": "workspace:^0.1.0",
     "@t3-oss/env-nextjs": "^0.7.1",
     "@tanstack/react-query": "^5.8.7",
     "@tanstack/react-query-devtools": "^5.8.7",
@@ -48,7 +49,7 @@
     "recharts": "^2.10.3",
     "superjson": "2.2.1",
     "tailwind-merge": "^2.2.0",
-    "zod": "^3.22.2"
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@reservue/eslint-config": "workspace:^0.2.0",
@@ -59,8 +60,8 @@
     "@types/react": "^18.2.42",
     "@types/react-dom": "^18.2.17",
     "dotenv-cli": "^7.3.0",
-    "eslint": "^8.53.0",
-    "prettier": "^3.1.0",
+    "eslint": "^8.56.0",
+    "prettier": "^3.1.1",
     "tailwindcss": "3.3.5",
     "tailwindcss-animate": "^1.0.7",
     "typescript": "^5.3.3"
