--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -14,17 +14,18 @@
   "dependencies": {
     "@reservue/auth": "workspace:^0.1.0",
     "@reservue/db": "workspace:^0.1.0",
+    "@reservue/validators": "workspace:^0.1.0",
     "@trpc/client": "next",
     "@trpc/server": "next",
     "superjson": "2.2.1",
-    "zod": "^3.22.2"
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@reservue/eslint-config": "workspace:^0.2.0",
     "@reservue/prettier-config": "workspace:^0.1.0",
     "@reservue/tsconfig": "workspace:^0.1.0",
-    "eslint": "^8.53.0",
-    "prettier": "^3.1.0",
+    "eslint": "^8.56.0",
+    "prettier": "^3.1.1",
     "typescript": "^5.3.3"
   },
   "eslintConfig": {
