--- a/packages/validators/package.json
+++ b/packages/validators/package.json
@@ -1,30 +1,30 @@
 {
-  "name": "@reservue/auth-proxy",
+  "name": "@reservue/validators",
   "private": true,
+  "version": "0.1.0",
   "type": "module",
+  "exports": {
+    ".": "./src/index.ts"
+  },
+  "license": "MIT",
   "scripts": {
-    "build": "nitro build",
     "clean": "rm -rf .turbo node_modules",
-    "dev": "nitro dev --port 3001",
-    "lint": "eslint .",
     "format": "prettier --check . --ignore-path ../../.gitignore",
+    "lint": "eslint .",
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
-    "@auth/core": "^0.18.4"
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@reservue/eslint-config": "workspace:^0.2.0",
     "@reservue/prettier-config": "workspace:^0.1.0",
-    "@reservue/tailwind-config": "workspace:^0.1.0",
     "@reservue/tsconfig": "workspace:^0.1.0",
     "eslint": "^8.56.0",
-    "nitropack": "^2.8.1",
     "prettier": "^3.1.1",
     "typescript": "^5.3.3"
   },
   "eslintConfig": {
-    "root": true,
     "extends": [
       "@reservue/eslint-config/base"
     ]
