--- a/apps/nextjs/package.json
+++ b/apps/nextjs/package.json
@@ -39,6 +39,7 @@
     "clsx": "^2.0.0",
     "cmdk": "^0.2.0",
     "date-fns": "^3.0.6",
+    "framer-motion": "^10.17.0",
     "lucide-react": "^0.303.0",
     "next": "^14.0.3",
     "react": "18.2.0",
