--- a/apps/nextjs/package.json
+++ b/apps/nextjs/package.json
@@ -13,8 +13,10 @@
     "with-env": "dotenv -e ../../.env --"
   },
   "dependencies": {
+    "@dnd-kit/core": "^6.1.0",
     "@hookform/resolvers": "^3.3.3",
     "@radix-ui/react-avatar": "^1.0.4",
+    "@radix-ui/react-checkbox": "^1.0.4",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-label": "^2.0.2",
