--- a/apps/nextjs/package.json
+++ b/apps/nextjs/package.json
@@ -14,6 +14,8 @@
   },
   "dependencies": {
     "@dnd-kit/core": "^6.1.0",
+    "@dnd-kit/modifiers": "^7.0.0",
+    "@dnd-kit/sortable": "^8.0.0",
     "@hookform/resolvers": "^3.3.3",
     "@radix-ui/react-avatar": "^1.0.4",
     "@radix-ui/react-checkbox": "^1.0.4",
@@ -52,6 +54,7 @@
     "recharts": "^2.10.3",
     "superjson": "2.2.1",
     "tailwind-merge": "^2.2.0",
+    "uuid": "^9.0.1",
     "zod": "^3.22.4"
   },
   "devDependencies": {
