fix: disable edge on signin route, allow dangerous email linking

--- a/.env.example
+++ b/.env.example
@@ -10,7 +10,7 @@ DB_NAME='YOUR_DB_NAME'
 DB_USERNAME=''
 DB_PASSWORD='pscale_pw_'
 
-# @see https://next-auth.js.org/configuration/options#nextauth_url
+# @see https://next-auth.js.org/configuration/options#AUTH_URL
 AUTH_URL='http://localhost:3000'
 AUTH_REDIRECT_PROXY_URL="http://localhost:3001/api"
 
