feat: add clerk to expo

--- a/apps/expo/package.json
+++ b/apps/expo/package.json
@@ -15,6 +15,7 @@
     "ios": "expo run:ios"
   },
   "dependencies": {
+    "@clerk/clerk-expo": "^0.20.1",
     "@expo/metro-config": "^0.10.7",
     "@shopify/flash-list": "1.4.3",
     "@tanstack/react-query": "^5.8.7",
@@ -25,12 +26,12 @@
     "expo-constants": "~14.4.2",
     "expo-linking": "~5.0.2",
     "expo-router": "2.0.14",
-    "expo-splash-screen": "~0.22.0",
-    "expo-status-bar": "~1.7.1",
+    "expo-splash-screen": "~0.20.5",
+    "expo-status-bar": "~1.6.0",
     "nativewind": "^4.0.16",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-native": "0.73.0",
+    "react-native": "0.72.6",
     "react-native-gesture-handler": "~2.12.0",
     "react-native-reanimated": "~3.3.0",
     "react-native-safe-area-context": "4.6.3",
@@ -38,15 +39,15 @@
     "superjson": "2.2.1"
   },
   "devDependencies": {
+    "@babel/core": "^7.23.2",
+    "@babel/preset-env": "^7.23.2",
+    "@babel/runtime": "^7.23.2",
+    "@expo/config-plugins": "^7.2.5",
     "@reservue/api": "workspace:^0.1.0",
     "@reservue/eslint-config": "workspace:^0.2.0",
     "@reservue/prettier-config": "workspace:^0.1.0",
     "@reservue/tailwind-config": "workspace:^0.1.0",
     "@reservue/tsconfig": "workspace:^0.1.0",
-    "@babel/core": "^7.23.2",
-    "@babel/preset-env": "^7.23.2",
-    "@babel/runtime": "^7.23.2",
-    "@expo/config-plugins": "^7.2.5",
     "@types/babel__core": "^7.20.4",
     "@types/react": "^18.2.42",
     "eslint": "^8.56.0",
