--- a/turbo.json
+++ b/turbo.json
@@ -49,6 +49,7 @@
     "AUTH_DISCORD_SECRET",
     "AUTH_REDIRECT_PROXY_URL",
     "AUTH_SECRET",
-    "AUTH_URL"
+    "AUTH_URL",
+    "CLERK_PUBLISHABLE_KEY"
   ]
 }
