--- a/apps/nextjs/package.json
+++ b/apps/nextjs/package.json
@@ -16,7 +16,7 @@
     "@dnd-kit/core": "^6.1.0",
     "@dnd-kit/modifiers": "^7.0.0",
     "@dnd-kit/sortable": "^8.0.0",
-    "@hookform/resolvers": "^3.3.3",
+    "@hookform/resolvers": "^3.3.4",
     "@radix-ui/react-alert-dialog": "^1.0.5",
     "@radix-ui/react-avatar": "^1.0.4",
     "@radix-ui/react-checkbox": "^1.0.4",
@@ -34,31 +34,31 @@
     "@reservue/auth": "workspace:^0.1.0",
     "@reservue/db": "workspace:^0.1.0",
     "@reservue/validators": "workspace:^0.1.0",
-    "@t3-oss/env-nextjs": "^0.7.1",
-    "@tanstack/react-query": "^5.8.7",
-    "@tanstack/react-query-devtools": "^5.8.7",
-    "@tanstack/react-query-next-experimental": "5.8.7",
-    "@tanstack/react-table": "^8.11.2",
-    "@trpc/client": "next",
-    "@trpc/next": "next",
-    "@trpc/react-query": "next",
-    "@trpc/server": "next",
+    "@tanstack/react-table": "^8.11.6",
     "class-variance-authority": "^0.7.0",
-    "clsx": "^2.0.0",
+    "clsx": "^2.1.0",
     "cmdk": "^0.2.0",
-    "date-fns": "^3.0.6",
-    "framer-motion": "^10.17.0",
-    "lucide-react": "^0.303.0",
-    "next": "^14.0.3",
-    "react": "18.2.0",
+    "date-fns": "^3.2.0",
+    "framer-motion": "^10.18.0",
+    "lucide-react": "^0.309.0",
     "react-day-picker": "^8.10.0",
-    "react-dom": "18.2.0",
-    "react-hook-form": "^7.49.2",
+    "react-hook-form": "^7.49.3",
     "react-wrap-balancer": "^1.1.0",
-    "recharts": "^2.10.3",
-    "superjson": "2.2.1",
+    "recharts": "^2.10.4",
     "tailwind-merge": "^2.2.0",
     "uuid": "^9.0.1",
+    "@t3-oss/env-nextjs": "^0.7.1",
+    "@tanstack/react-query": "^5.17.7",
+    "@tanstack/react-query-devtools": "^5.17.7",
+    "@tanstack/react-query-next-experimental": "5.17.7",
+    "@trpc/client": "next",
+    "@trpc/react-query": "next",
+    "@trpc/server": "next",
+    "geist": "^1.2.0",
+    "next": "^14.0.4",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "superjson": "2.2.1",
     "zod": "^3.22.4"
   },
   "devDependencies": {
@@ -66,14 +66,14 @@
     "@reservue/prettier-config": "workspace:^0.1.0",
     "@reservue/tailwind-config": "workspace:^0.1.0",
     "@reservue/tsconfig": "workspace:^0.1.0",
-    "@types/node": "^18.18.13",
-    "@types/react": "^18.2.42",
-    "@types/react-dom": "^18.2.17",
+    "tailwindcss-animate": "^1.0.7",
+    "@types/node": "^20.10.6",
+    "@types/react": "^18.2.46",
+    "@types/react-dom": "^18.2.18",
     "dotenv-cli": "^7.3.0",
     "eslint": "^8.56.0",
     "prettier": "^3.1.1",
-    "tailwindcss": "3.3.5",
-    "tailwindcss-animate": "^1.0.7",
+    "tailwindcss": "^3.4.0",
     "typescript": "^5.3.3"
   },
   "eslintConfig": {
