--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -2,20 +2,21 @@
   "name": "@reservue/api",
   "version": "0.1.0",
   "private": true,
-  "main": "./index.ts",
-  "types": "./index.ts",
+  "type": "module",
+  "exports": {
+    ".": "./src/index.ts"
+  },
   "license": "MIT",
   "scripts": {
     "clean": "rm -rf .turbo node_modules",
-    "lint": "eslint .",
     "format": "prettier --check . --ignore-path ../../.gitignore",
+    "lint": "eslint .",
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
     "@reservue/auth": "workspace:^0.1.0",
     "@reservue/db": "workspace:^0.1.0",
     "@reservue/validators": "workspace:^0.1.0",
-    "@trpc/client": "next",
     "@trpc/server": "next",
     "superjson": "2.2.1",
     "zod": "^3.22.4"
