--- a/tooling/tailwind/package.json
+++ b/tooling/tailwind/package.json
@@ -15,7 +15,7 @@
   },
   "dependencies": {
     "autoprefixer": "^10.4.16",
-    "tailwindcss": "3.3.5"
+    "tailwindcss": "^3.4.0"
   },
   "devDependencies": {
     "@reservue/eslint-config": "workspace:^0.2.0",
