--- a/packages/auth/package.json
+++ b/packages/auth/package.json
@@ -15,11 +15,12 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
-    "@reservue/db": "workspace:^0.1.0",
     "@auth/drizzle-adapter": "^0.3.12",
+    "@reservue/db": "workspace:^0.1.0",
     "@t3-oss/env-nextjs": "^0.7.1",
     "next": "^14.0.4",
     "next-auth": "5.0.0-beta.4",
+    "nodemailer": "^6.9.8",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "zod": "^3.22.4"
