--- a/apps/expo/package.json
+++ b/apps/expo/package.json
@@ -28,6 +28,7 @@
     "expo-splash-screen": "~0.20.5",
     "expo-status-bar": "~1.6.0",
     "expo-web-browser": "^12.3.2",
+    "lucide-react-native": "^0.309.0",
     "nativewind": "^4.0.22",
     "react": "18.2.0",
     "react-dom": "18.2.0",
