--- a/apps/expo/package.json
+++ b/apps/expo/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "@expo/metro-config": "^0.10.7",
+    "@gorhom/bottom-sheet": "^4",
     "@shopify/flash-list": "1.4.3",
     "@tanstack/react-query": "^5.17.7",
     "@trpc/client": "next",
@@ -33,7 +34,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.72.6",
-    "react-native-gesture-handler": "~2.12.0",
+    "react-native-gesture-handler": "~2.12.1",
     "react-native-reanimated": "~3.3.0",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.1",
