--- a/apps/expo/package.json
+++ b/apps/expo/package.json
@@ -17,11 +17,14 @@
   "dependencies": {
     "@expo/metro-config": "^0.10.7",
     "@gorhom/bottom-sheet": "^4",
+    "@react-native-picker/picker": "2.4.10",
+    "@reservue/validators": "workspace:^0.1.0",
     "@shopify/flash-list": "1.4.3",
     "@tanstack/react-query": "^5.17.7",
     "@trpc/client": "next",
     "@trpc/react-query": "next",
     "expo": "^49.0.21",
+    "expo-checkbox": "~2.4.0",
     "expo-constants": "~14.4.2",
     "expo-linking": "~5.0.2",
     "expo-router": "2.0.14",
@@ -33,6 +36,7 @@
     "nativewind": "^4.0.22",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.49.3",
     "react-native": "0.72.6",
     "react-native-gesture-handler": "~2.12.1",
     "react-native-reanimated": "~3.3.0",
