--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -17,5 +17,5 @@
     "next/router.d.ts",
     "next/dist/client/router.d.ts"
   ],
-  "conventionalCommits.scopes": ["expo", "api"]
+  "conventionalCommits.scopes": ["expo", "api", "nextjs"]
 }
