--- a/apps/expo/package.json
+++ b/apps/expo/package.json
@@ -19,6 +19,7 @@
     "@gorhom/bottom-sheet": "^4",
     "@react-native-picker/picker": "2.4.10",
     "@reservue/validators": "workspace:^0.1.0",
+    "@reservue/types": "workspace:^0.1.0",
     "@shopify/flash-list": "1.4.3",
     "@tanstack/react-query": "^5.17.7",
     "@trpc/client": "next",
