--- a/apps/nextjs/package.json
+++ b/apps/nextjs/package.json
@@ -35,6 +35,7 @@
     "@reservue/auth": "workspace:^0.1.0",
     "@reservue/db": "workspace:^0.1.0",
     "@reservue/validators": "workspace:^0.1.0",
+    "@reservue/types": "workspace:^0.1.0",
     "@tanstack/react-table": "^8.11.6",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
