--- a/.env.example
+++ b/.env.example
@@ -1,24 +1,23 @@
-# Since .env is gitignored, you can use .env.example to build a new `.env` file when you clone the repo.
-# Keep this file up-to-date when you add new variables to \`.env\`.
 
-# This file will be committed to version control, so make sure not to have any secrets in it.
-# If you are cloning this repo, create a copy of this file named `.env` and populate it with your secrets.
-
-# The database URL is used to connect to your PlanetScale database.
 DB_HOST='aws.connect.psdb.cloud'
-DB_NAME='YOUR_DB_NAME'
-DB_USERNAME=''
-DB_PASSWORD='pscale_pw_'
+DB_USERNAME=
+DB_PASSWORD=
+DB_NAME='reservue'
 
 # @see https://next-auth.js.org/configuration/options#AUTH_URL
-AUTH_URL='http://localhost:3000'
-AUTH_REDIRECT_PROXY_URL="http://localhost:3001/api"
+AUTH_URL=
+# AUTH_REDIRECT_PROXY_URL="http://localhost:3001/api"
 
 # You can generate the secret via 'openssl rand -base64 32' on Unix
 # @see https://next-auth.js.org/configuration/options#secret
-AUTH_SECRET='supersecret'
+NEXTAUTH_SECRET=
 
-# Preconfigured Discord OAuth provider, works out-of-the-box
-# @see https://next-auth.js.org/providers/discord
-AUTH_DISCORD_ID=''
-AUTH_DISCORD_SECRET=''
+AUTH_GOOGLE_ID=
+AUTH_GOOGLE_SECRET=
+AUTH_FACEBOOK_ID=
+AUTH_FACEBOOK_SECRET=
+
+EMAIL_SERVER_HOST=
+EMAIL_SERVER_PORT=
+EMAIL_SERVER_USER=
+EMAIL_SERVER_PASSWORD=
